--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Available Classes</title>
+  <title>Pilihan Kelas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
 </head>
@@ -13,26 +13,26 @@
       <a class="navbar-brand" href="index.html">SkillSpotter</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="classes.html">Classes</a></li>
-          <li class="nav-item"><a class="nav-link" href="submit.html">Submit Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link active" href="classes.html">Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="submit.html">Buat Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Tentang KursusLokal</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Hubungi Kami</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="container my-5">
-    <h1 class="mb-4 text-center">Available Classes</h1>
+    <h1 class="mb-4 text-center">Pilihan Kelas</h1>
     <div class="row g-4">
       <div class="col-md-4">
-        <div class="card p-3"><h5>Basic Cooking</h5><p>Instructor: Jane Doe<br>Location: Downtown Hall</p></div>
+        <div class="card p-3"><h5>Dasar Memasak</h5><p>Pengajar: Tiara<br>Lokasi: Telanai</p></div>
       </div>
       <div class="col-md-4">
-        <div class="card p-3"><h5>Woodworking 101</h5><p>Instructor: John Smith<br>Location: Woodcraft Center</p></div>
+        <div class="card p-3"><h5>Pencak Silat</h5><p>Pengajar: Agung<br>Lokasi: Jerambah Bolong</p></div>
       </div>
       <div class="col-md-4">
-        <div class="card p-3"><h5>Conversational Japanese</h5><p>Instructor: Yuki Tanaka<br>Location: Language Lab</p></div>
+        <div class="card p-3"><h5>Bahasa Inggris</h5><p>Pengajar: John<br>Lokasi: Jelutung</p></div>
       </div>
     </div>
   </main>
