--- a/submit.html
+++ b/submit.html
@@ -3,45 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Submit a Class</title>
+  <title>Daftarkan Kursus</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">SkillSpotter</a>
+      <a class="navbar-brand" href="index.html">KursusLokal</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
-          <li class="nav-item"><a class="nav-link active" href="submit.html">Submit Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="classes.html">Kelas</a></li>
+          <li class="nav-item"><a class="nav-link active" href="submit.html">Buat Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Tentang KursusLokal</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Hubungi Kami</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="container my-5">
-    <h1 class="mb-4 text-center">Submit Your Offline Class</h1>
+    <h1 class="mb-4 text-center">Daftarkan Kursus Anda</h1>
     <form>
       <div class="mb-3">
-        <label for="title" class="form-label">Class Title</label>
+        <label for="title" class="form-label">Nama Kursus</label>
         <input type="text" class="form-control" id="title">
       </div>
       <div class="mb-3">
-        <label for="instructor" class="form-label">Instructor Name</label>
+        <label for="instructor" class="form-label">Nama Pengajar</label>
         <input type="text" class="form-control" id="instructor">
       </div>
       <div class="mb-3">
-        <label for="location" class="form-label">Class Location</label>
+        <label for="location" class="form-label">Lokasi Kursus</label>
         <input type="text" class="form-control" id="location">
       </div>
       <div class="mb-3">
-        <label for="details" class="form-label">Class Details</label>
+        <label for="details" class="form-label">Deskripsi Kursus</label>
         <textarea class="form-control" id="details" rows="4"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Daftar</button>
     </form>
   </main>
 </body>
