--- a/about.html
+++ b/about.html
@@ -3,33 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us</title>
+  <title>Tentang KursusLokal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">SkillSpotter</a>
+      <a class="navbar-brand" href="index.html">KursusLokal</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
-          <li class="nav-item"><a class="nav-link" href="submit.html">Submit Class</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="classes.html">Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="submit.html">Buat Kursus</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">Tentang KursusLokal</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Hubungi Kami</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="container my-5">
-    <h1 class="mb-4 text-center">About SkillSpotter</h1>
+    <h1 class="mb-4 text-center">Tentang KursusLokal</h1>
     <p>
-      SkillSpotter is a community-driven platform that helps people discover and share offline skill classes in their local area.
-      Our goal is to empower local instructors and learners to connect without needing to rely on virtual or remote setups.
-    </p>
-    <p>
-      Whether you're passionate about cooking, crafting, technology, or teaching a language, we want to help you build real connections in the real world.
+      KursusLokal adalah platform yang membantu orang untuk menemukan dan berbagi kursus offline di sekitar mereka.
+      Tujuan kami adalah memberdayakan pengajar lokal dan pelajar untuk terhubung langsung di lokasi terdekat.
     </p>
   </main>
 </body>
