--- a/contact.html
+++ b/contact.html
@@ -3,42 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us</title>
+  <title>Hubungi Kami</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">SkillSpotter</a>
+      <a class="navbar-brand" href="index.html">KursusLokal</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
-          <li class="nav-item"><a class="nav-link" href="submit.html">Submit Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="classes.html">Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="submit.html">Buat Kursus</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Tentang KursusLokal</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contact.html">Hubungi Kami</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="container my-5">
-    <h1 class="mb-4 text-center">Contact Us</h1>
-    <p class="text-center">Have a question, suggestion, or feedback? We'd love to hear from you.</p>
+    <h1 class="mb-4 text-center">Hubungi Kami</h1>
+    <p class="text-center">Punya pertanyaan, kritik, atau saran? Jangan ragu untuk mengubungi kami.</p>
     <form class="w-50 mx-auto">
       <div class="mb-3">
-        <label for="name" class="form-label">Your Name</label>
+        <label for="name" class="form-label">Nama</label>
         <input type="text" class="form-control" id="name" required>
       </div>
       <div class="mb-3">
-        <label for="email" class="form-label">Your Email</label>
+        <label for="email" class="form-label">Email</label>
         <input type="email" class="form-control" id="email" required>
       </div>
       <div class="mb-3">
-        <label for="message" class="form-label">Message</label>
+        <label for="message" class="form-label">Pesan</label>
         <textarea class="form-control" id="message" rows="4" required></textarea>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Send</button>
+      <button type="submit" class="btn btn-primary w-100">Kirim</button>
     </form>
   </main>
 </body>
