--- a/index.html
+++ b/index.html
@@ -34,14 +34,23 @@
   <section class="container my-5">
     <h2 class="mb-4 text-center">Kursus Populer</h2>
     <div class="row text-center">
-      <div class="col-md-3"><div class="card p-3"><strong>Memasak</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>DIY</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>Bahasa</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>IT</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>Musik</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>Bela Diri</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>Akademik</strong></div></div>
-      <div class="col-md-3"><div class="card p-3"><strong>Menggambar</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Memasak</strong></div></div>
+      
+      <div class="card" style="width: 18rem;">
+        <img src="your-image.jpg" class="card-img-top" alt="Image description">
+        <div class="card-body">
+            <h5 class="card-title">Memasak</h5>
+            <p class="card-text">Deskripsi singkat atau info kelas di sini.</p>
+        </div>
+      </div>
+
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>DIY</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Bahasa</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>IT</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Musik</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Bela Diri</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Akademik</strong></div></div>
+      <div class="col-md-3"><div class="col-mb-3"><div class="card p-3"><strong>Menggambar</strong></div></div>
     </div>
   </section>
   <footer class="bg-dark text-white text-center py-3">
