--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KursusLokal - Beranda</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+<div style="background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">KursusLokal</a>
+      <a class="navbar-brand" href="index.html">
+        <span style="font-family: 'Poppins', sans-serif;">
+          Kursus<span style="color: #4fc3f7;">Lokal</span>
+        </span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,6 +30,7 @@
       </div>
     </div>
   </nav>
+</div>
   <header class="hero-header text-center py-5 text-white">
     <div class="container">
       <h1 class="display-4">Temukan komunitas belajar di dekatmu</h1>
