--- a/classes.html
+++ b/classes.html
@@ -8,13 +8,21 @@
   <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+<div style="background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">SkillSpotter</a>
+      <a class="navbar-brand" href="index.html">
+        <span style="font-family: 'Poppins', sans-serif;">
+          Kursus<span style="color: #4fc3f7;">Lokal</span>
+        </span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-          <li class="nav-item"><a class="nav-link active" href="classes.html">Kursus</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="classes.html">Kursus</a></li>
           <li class="nav-item"><a class="nav-link" href="submit.html">Buat Kursus</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">Tentang KursusLokal</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Hubungi Kami</a></li>
@@ -22,6 +30,7 @@
       </div>
     </div>
   </nav>
+</div>
   <main class="container my-5">
     <h1 class="mb-4 text-center">Pilihan Kelas</h1>
     <div class="row g-4">
