--- a/submit.html
+++ b/submit.html
@@ -6,6 +6,7 @@
   <title>Daftarkan Kursus</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
 <div style="background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
