--- a/submit.html
+++ b/submit.html
@@ -62,5 +62,40 @@
   </div>
 </main>
 
+<main class="container-fluid my-5">
+  <div class="row min-vh-100 align-items-center">
+    <div class="col-md-6 px-5">
+      <h1 class="mb-4">Daftarkan Kursus Anda</h1>
+      <form>
+        <div class="mb-3">
+          <label for="title" class="form-label">Nama Kursus</label>
+          <input type="text" class="form-control" id="title">
+        </div>
+        <div class="mb-3">
+          <label for="instructor" class="form-label">Nama Pengajar</label>
+          <input type="text" class="form-control" id="instructor">
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">Lokasi Kursus</label>
+          <input type="text" class="form-control" id="location">
+        </div>
+        <div class="mb-3">
+          <label for="details" class="form-label">Deskripsi Kursus</label>
+          <textarea class="form-control" id="details" rows="4"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Daftar</button>
+      </form>
+    </div>
+
+    <div class="col-md-6 d-none d-md-block p-0">
+      <div class="h-100 w-100" style="
+        background-image: url('https://images.unsplash.com/photo-1603575051277-df8b2dc7f9c5');
+        background-size: cover;
+        background-position: center;
+      ">
+      </div>
+    </div>
+  </div>
+</main>
 </body>
 </html>
