--- a/submit.html
+++ b/submit.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="col-md-6 d-none d-md-block">
-      <img src="https://images.unsplash.com/photo-1603575051277-df8b2dc7f9c5?auto=format&fit=crop&w=800&q=80"
+      <img src="https://ugc.futurelearn.com/uploads/images/01/01/header_010123da-348a-4951-a0ac-75d320a8322c.jpg"
            class="img-fluid h-100 w-100" 
            style="object-fit: cover;" 
            alt="Kursus Image">
