--- a/about.html
+++ b/about.html
@@ -33,11 +33,14 @@
   </nav>
 </div>
   <main class="container my-5">
-    <h1 class="mb-4 text-center">Tentang KursusLokal</h1>
-    <p>
-      KursusLokal adalah platform yang membantu orang untuk menemukan dan berbagi kursus offline di sekitar mereka.
-      Tujuan kami adalah memberdayakan pengajar lokal dan pelajar untuk terhubung langsung di lokasi terdekat.
-    </p>
+  <div class="card mx-auto shadow-sm" style="max-width: 600px; background-color: #d0eaff; color: #000;">
+    <div class="card-body">
+      <h3 class="card-title mb-0">Tentang <span style="color: #4db8ff;">KursusLokal</span></h3>
+    </div>
+  </div>
+  <p class="mt-4 px-3" style="max-width: 700px; margin: auto;">
+    KursusLokal adalah platform komunitas yang membantu Anda menemukan dan berbagi kelas keterampilan secara offline di sekitar Anda. Belajar langsung dari pengajar lokal, mulai dari memasak, bahasa, hingga bela diri!
+  </p>
   </main>
 </body>
 </html>
