--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
   </nav>
 </div>
   <main class="container my-5">
-  <div class="card mx-auto shadow-sm" style="max-width: 600px; background-color: #d0eaff; color: #000;">
-    <div class="card-body">
-      <h3 class="card-title mb-0">Tentang <span style="color: #4db8ff;">KursusLokal</span></h3>
-    </div>
+  <div class="py-5" style="background-color: #d0eaff; width: 100%;">
+    <h1 class="text-center fw-bold m-0" style="color: #000; font-size: 2.5rem;">
+      Tentang KursusLokal
+    </h1>
   </div>
   <p class="mt-4 px-3" style="max-width: 700px; margin: auto;">
     KursusLokal adalah platform komunitas yang membantu Anda menemukan dan berbagi kelas keterampilan secara offline di sekitar Anda. Belajar langsung dari pengajar lokal, mulai dari memasak, bahasa, hingga bela diri!
